# aurora

./: .gitignore  Aurora.py  README.md  config.py  daemon.py  functions.py  installer.py  manual_installer.py  pyproject.toml  strings.py
.github/workflows/: tests.yml
aurora/: Aurora.py  config.py  daemon.py  functions.py  installer.py  main.py  responses.py  settings.py  status.py  strings.py
aurora/config/: paths.py
aurora/drivers/: arch.py  driver.py  ubuntu.py
tests/: BaseDriverTest.py  test_arch_driver.py
