[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora"
version = "1.0.0"
description = "Aurora package update assistant"
requires-python = ">=3.10"
dependencies = [
    "rich",
]
license = "GPL-3.0-or-later"

[project.scripts]
aurora = "aurora.main:main"

[tool.setuptools.packages.find]
where = ["."]